--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "body-parser": "^1.12.4",
     "crypto": "0.0.3",
+    "dotenv": "^1.2.0",
     "ejs": "^2.3.1",
     "express": "^4.12.4",
     "express-jwt": "^3.1.0",
@@ -17,5 +18,17 @@
     "mongoose": "^4.2.3",
     "passport": "^0.3.0",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-autoprefixer": "^3.1.0",
+    "gulp-beautify": "^2.0.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-minify-css": "^1.2.1",
+    "gulp-ng-annotate": "^1.1.0",
+    "gulp-notify": "^2.2.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-ruby-sass": "^2.0.5",
+    "gulp-uglify": "^1.4.2"
   }
 }
