--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-beautify": "^2.0.0",
     "gulp-concat": "^2.6.0",
+    "gulp-htmlmin": "^1.3.0",
     "gulp-minify-css": "^1.2.1",
     "gulp-ng-annotate": "^1.1.0",
     "gulp-notify": "^2.2.0",
